style: add will-change to section icon after element to prevent cropping on animation end on mobile devices

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,7 +3,6 @@
     grid-template-rows: repeat(3, auto);
     grid-template-columns: auto 1fr;
     column-gap: 1rem;
-    overflow-x: visible;
 }
 
 .section__icon,
@@ -33,7 +32,6 @@
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    overflow-x: visible;
 }
 
 .section__icon::after {
@@ -47,7 +45,7 @@
     translate: -50% -50%;
     border-radius: 50%;
     filter: blur(10px);
-    overflow-x: visible;
+    will-change: transform;
 }
 
 .section__icon > svg {
